@@ -195,11 +195,13 @@ if ($create_agent) {
 // Show tabs
 $img_style = array ("class" => "top", "width" => 16);
 
+// TODO: Change to use print_page_header
 if ($id_agente) {
 	echo '<div id="menu_tab_frame"><div id="menu_tab_left"><ul class="mn">';
 	echo '<li class="nomn"><a href="index.php?sec=gagente&amp;sec2=godmode/agentes/configurar_agente&amp;id_agente='.$id_agente.'">';
 	print_image ("images/setup.png", false, $img_style);
 	echo '&nbsp; '.mb_substr(get_agent_name ($id_agente), 0, 21) .'</a>';
+	echo '&nbsp;<img src="images/help.png" class="img_help" title="'.__('Help').'" onclick="open_help(\'agent_manager\')" alt="'.__('Help').'">';
 	echo "</li></ul></div>";
 
 	echo '<div id="menu_tab"><ul class="mn"><li class="nomn">';
@@ -250,7 +252,7 @@ if ($id_agente) {
 // Create agent 
 else {
 
-	print_page_header (__('Agent manager'), "images/bricks.png", false, "", true);
+	print_page_header (__('Agent manager'), "images/bricks.png", false, "create_agent", true);
 
 }
 
